# rustbasic-jwt

./: .env  Cargo.toml  README.md  build.rs
database/migrations/: m20260515_160658_create_jwt_blacklists_table.rs  m20260515_160658_create_users_table.rs
src/: claims.rs  lib.rs  middleware.rs  service.rs
src/app/models/: jwt_blacklist.rs  user.rs
src/entities/: jwt_blacklist.rs  mod.rs  user.rs
