[package]
name = "rustbasic-jwt"
version = "0.0.6"
edition = "2024"
build = "build.rs"
description = "JWT authentication package for the RustBasic Framework."
license = "MIT"
repository = "https://github.com/herisvan321/rustbasic-jwt"
readme = "README.md"
keywords = ["web", "framework", "jwt", "auth", "authentication"]
categories = ["web-programming"]

[lib]
name = "rustbasic_jwt"
path = "src/lib.rs"

[dependencies]
rustbasic-core = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
colored = "3.0.0"
chrono = { version = "0.4.39", features = ["serde"] }
http = "1.1"
jsonwebtoken = "9.3.0"
bcrypt = "0.19.1"
uuid = { version = "1.11.0", features = ["v4", "serde"] }

[build-dependencies]
chrono = "0.4.39"
uuid = { version = "1.11.0", features = ["v4"] }
