[package]
name = "rustbasic-jwt"
version = "0.0.7"
edition = "2024"
build = "build.rs"
description = "JWT authentication package for the RustBasic Framework."
license = "MIT"
repository = "https://github.com/herisvan321/rustbasic-jwt"
readme = "README.md"
keywords = ["web", "framework", "jwt", "auth", "authentication"]
categories = ["web-programming"]

[lib]
name = "rustbasic_jwt"
path = "src/lib.rs"

[dependencies]
rustbasic-core = { version = "0.1", features = ["jwt"] }

